@@ -12,6 +12,11 @@
 		
 		<li/> Bug Fix:
 	 
+			Sites associated with a class and class sites now can properly
+			add the class as an editor.
+		 (<i>Adam Franco</i>)
+		<li/> Bug Fix:
+	 
 			Segue now prints a nice error instructing the user to update thier links 
 			if a bad link tries to get a non-existant section or page and creates a 
 			corrupted section or page object.
